--- a/app/static/style.css
+++ b/app/static/style.css
@@ -10,7 +10,7 @@ form {
     background: #8974AD;
     position: absolute;
     left: 50%;
-    top: 250px;
+    bottom: 280px;
     margin: -100px 0 0 -165px;
     padding: 30px;
     box-shadow:         2px 2px 4px rgba(33,33,33,0.2);
@@ -27,7 +27,7 @@ div.flashes {
     background: #E49391;
     position: absolute;
     left: 50%;
-    top: 177px;
+    bottom: 490px;
     color: #993534;
     font-size: 0.8em;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
