--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,7 +1,11 @@
 body {
-    font-family: Sans-Serif;
+    font-family: 'Open Sans', arial, helvetica, sans-serif;
     font-size: 1em;
     color: #666;
+}
+
+P {
+    font-size: .75em;
 }
 
 .wrapper {
@@ -19,7 +23,7 @@ body {
 
 form {
     display: block;
-    background: #8974AD;
+    background: #8f82a5;
     padding: 30px;
     box-shadow: 2px 2px 4px rgba(33,33,33,0.2);
     -webkit-box-shadow: 2px 2px 4px rgba(33,33,33,0.2);
@@ -35,11 +39,10 @@ div.flashes {
     background: #E49391;
     position: absolute;
     bottom: 100%;
-    color: #993534;
+    color: #000;
     font-size: 0.8em;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     padding: 0px 28px 10px 30px;
-    border: 0px solid #993534;
+    border: 0px solid #000;
     border-radius: 4px 4px 0 0;
     -webkit-border-radius: 4px 4px 0 0;
     -moz-border-radius: 4px 4px 0 0;
@@ -57,7 +60,7 @@ div.flashes h4 {
     margin-top: 10px;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="email"] {
     border: 1px solid #ebebeb;
     padding: 10px;
     width: 320px;
@@ -66,14 +69,15 @@ input[type="text"], input[type="password"] {
 }
 
 input[type="submit"] {
-    border:0px solid #ebebeb;
-    background:#ebebeb;
-    color:#555;
-    padding:10px 40px;
-    cursor:pointer;
-    float:right;
+    border: 0px solid #ebebeb;
+    background: #ebebeb;
+    color: #555;
+    padding: 10px 40px;
+    cursor: pointer;
+    float: right;
 }
 
 input[type="submit"]:hover {
-    background:#fafafa
+    background: #fafafa;
 }
+
