--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Squiz Auth</title>
+        <title>Squiz SSO Authentication</title>
         <link rel="stylesheet" type="text/css" href="/static/style.css" />
         <script type="text/javascript">
             window.onload = function() {
                 document.getElementById('username').focus();
-            };    
+            };
         </script>
     </head>
     <body>
@@ -14,7 +14,7 @@
         {% with messages = get_flashed_messages() %}
           {% if messages %}
             <div class="flashes">
-                <h4>Warning</h4>	
+                <h4>Warning</h4>
             {% for message in messages %}
                 {{ message }}<br />
             {% endfor %}
@@ -22,10 +22,11 @@
           {% endif %}
         {% endwith %}
             <form method="post">
-                <input type="text" id="username" name="username" placeholder="Username" />
+                <input type="email" id="username" name="username" placeholder="Email Address" />
                 <input type="password" id="password" name="password" placeholder="Password" />
                 <input type="submit" id="login" name="login" value="Login" />
             </form>
+            <p>Please login using the previously supplied client extranet details, or your Squiz staff account. If you do not have these or do not know either of these please contact <a href="mailto:support@squiz.co.uk?Subject=SSO%20Login%20details%20enquiry" target="_top">support</a>. If you were sent this link in error or do not have a Squiz account, you will not be able to access this resource.</p>
         </div>
     </body>
 </html>
