Update SSO auth tool
Signed-off-by: root <root@ops.squiz.co.uk>

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,11 +22,11 @@
           {% endif %}
         {% endwith %}
             <form method="post">
-                <input type="email" id="username" name="username" placeholder="Email Address" />
+                <input type="text" id="username" name="username" placeholder="Email Address" />
                 <input type="password" id="password" name="password" placeholder="Password" />
                 <input type="submit" id="login" name="login" value="Login" />
             </form>
-            <p>Please login using the previously supplied client extranet details, or your Squiz staff account. If you do not know either of these please contact <a href="mailto:support@squiz.co.uk?Subject=SSO%20Login%20details%20enquiry" target="_top">support</a>. If you were sent this link in error or do not have a Squiz account, you will not be able to access this resource.</p>
+            <p>Please login using the previously supplied client extranet details, or your Squiz staff account. If you do not know either of these please contact <a href="mailto:support@squiz.co.uk?Subject=Squiz%20Auth%20SSO%20Login%20details%20enquiry" target="_top">support</a>. If you were sent this link in error or do not have a Squiz account, you will not be able to access this resource.</p>
         </div>
     </body>
 </html>
