--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,7 +26,7 @@
                 <input type="password" id="password" name="password" placeholder="Password" />
                 <input type="submit" id="login" name="login" value="Login" />
             </form>
-            <p>Please login using the previously supplied client extranet details, or your Squiz staff account. If you do not know either of these please contact <a href="mailto:support@squiz.co.uk?Subject=Squiz%20Auth%20SSO%20Login%20details%20enquiry" target="_top">support</a>. If you were sent this link in error or do not have a Squiz account, you will not be able to access this resource.</p>
+            <p>Please login using the previously supplied client extranet details, or your Squiz staff account. If you do not know either of these please contact <a href="mailto:ams@squiz.co.uk?Subject=Extranet%20SSO%20Login%20details%20enquiry" target="_top">support</a>. If you were sent this link in error or do not have a Squiz account, you will not be able to access this resource.</p>
         </div>
     </body>
 </html>
